# sql-mcp

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-constraints.txt
.github/workflows/: ci.yml  docker-image.yml
AGENT/: INSTRUCTION.md
AGENT/tasks/: harden-read-only-sql.md
scripts/: create_project.py
sql_mcp_server/: __init__.py  config.py  db.py  server.py  tools.py
tests/: conftest.py  test_http.py  test_integration_postgres.py  test_metrics.py  test_tools.py  test_tools_adversarial.py  test_tools_extra.py
