[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "A configurable SQL MCP server using fastmcp, SQLAlchemy and pydantic-settings."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "sql-mcp", email = "dev@example.com"}]
license = {text = "MIT"}

[project.dependencies]
fastmcp = "^0.1"
SQLAlchemy = "^1.4"
pydantic-settings = "^0.1"
pydantic = "^2.6"
psycopg2-binary = {version = "^2.9", optional = true}
pymysql = {version = "^1.0", optional = true}
pyodbc = {version = "^4.0", optional = true}

[project.optional-dependencies]
postgresql = ["psycopg2-binary"]
mysql = ["pymysql"]
mssql = ["pyodbc"]
parsing = ["sqlparse"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
