[project]
name = "sql-mcp-server"
version = "0.1.0"
description = "A configurable SQL MCP server using fastmcp, SQLAlchemy and pydantic-settings."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "sql-mcp", email = "dev@example.com"}]
license = {text = "MIT"}

dependencies = [
    "fastmcp>=0.1,<0.2",
    "SQLAlchemy>=1.4,<2",
    "pydantic-settings>=0.2.5,<3",
    "pydantic>=2.7,<2.8",
    "fastapi>=0.95,<0.96",
    "uvicorn>=0.22,<0.23",
]

[project.optional-dependencies]
postgresql = ["psycopg2-binary"]
mysql = ["pymysql"]
mssql = ["pyodbc"]
parsing = ["sqlparse"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-q"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
